--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,16 +1,37 @@
----
-layout: archive
-title: "Talks and presentations"
-permalink: /talks/
-author_profile: true
----
+## Presentations
 
-{% if site.talkmap_link == true %}
+ **Child phonological grammars**
+ 
+ Repiso-Puigdelliura, Gemma. (January, 2021). Lexically-Conditioned Child Acquisition of English Empty Onset Repairs. LSA 2021 Virtual Annual Meeting, Online/USA.[poster](https://github.com/gemmarepiso/gemmarepiso.github.io/blob/master/assets/images/LSA_2021_poster_GRPwebsite.pdf?raw=true)
+ 
+ Repiso-Puigdelliura, Gemma. (November, 2020). Repairing Onsetless Syllables during Late Childhood. 45th Boston University Conference on Language Development, Online/ Boston, USA.[poster](https://github.com/gemmarepiso/gemmarepiso.github.io/blob/master/assets/images/Submission-160_poster.pdf?raw=true)
+ 
+ Repiso-Puigdelliura Gemma. (2020). Spanish Resyllabification in Child and Adult Heritage Speakers. Current Approaches to Spanish and Portuguese Second Language Phonology, San José, USA.
+[slides](https://github.com/gemmarepiso/gemmarepiso.github.io/blob/master/assets/images/resyllabification%20(67).pdf?raw=true)
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
+ Repiso-Puigdelliura Gemma. (2019). The intonation of child heritage speakers. Hispanic Linguistics Symposium, El Paso, USA.
 
-{% endif %}
+Repiso-Puigdelliura Gemma,Kim Ji Young.(2019). The acquisition of the Spanish trill in child and adult heritage speakers, r-atics 6, Paris, France. [abstract](https://github.com/gemmarepiso/gemmarepiso.github.io/blob/assets-1/Abstract%20R-atics.pdf)
 
-{% for post in site.talks reversed %}
-  {% include archive-single-talk.html %}
-{% endfor %}
+ **Adult phonological grammars**
+
+ Kim, Ji Young, Matthew Faytak, Gemma Repiso-Puigdelliura, and Erin Mauffray. (December, 2020). Articulation of non-normative variants of L1 and L2 Spanish trill /r/. Acoustics Virtually Everywhere 179th Meeting The Acoustical Society of America, Online/USA. 
+
+
+Mauffray, Erin, Matthew Faytak, Ji Young Kim, and Gemma Repiso-Puigdelliura. (December, 2020). Lateral Articulation of the Spanish trill /r/. Acoustics Virtually Everywhere 179th Meeting The Acoustical Society of America, Online/USA. 
+
+ Repiso-Puigdelliura Gemma, Benvenuti Isabel, Kim Ji Young . (2019). Heritage Speakers' Production of Palatal Fricatives. Hispanic Linguistics Symposium, El Paso, USA. [abstract](https://github.com/gemmarepiso/gemmarepiso.github.io/blob/assets-1/Palatal_Fricatives_HLS_2019.pdf?raw=true)
+
+
+Kim Ji Young, Repiso-Puigdelliura Gemma. (2018). Understanding the Shapes and Meanings of uptalk in heritage speakers of Spanish, Hispanic Linguistics Symposium, Austin, TX.
+
+Kim Ji Young, Repiso-Puigdelliura  Gemma.(2018). The Forms and Functions of of Uptalk in Spanish Prosody by Spanish Heritage Speakers in Los Angeles, Heritage Language Conference, Los Angeles, CA.
+
+Kim Ji Young, Repiso-Puigdelliura Gemma.(2018). Phonetic and Phonological Analysis of Uptalk in Heritage Spanish, Current Approaches to Spanish and Portuguese Second Language Phonology (CASPSLaP), Bloomington, IN.
+
+Kim Ji Young, Repiso-Puigdelliura Gemma.(2017). Use of continuous measures in examining heritage speakers’ production of Spanish alveolar tap /ɾ/, Hispanic Linguistics Symposium, Lubbock, USA.
+
+Kim Ji Young, Repiso-Puigdelliura Gemma. (2017). Can you roll your rhotics?, New Ways of Analyzing Variation, Madison, IL
+
+
+
