--- a/Week3_stats_linguists.html
+++ b/Week3_stats_linguists.html
@@ -1042,14 +1042,11 @@ testing</a></li>
 <div id="learning-objectives" class="section level1">
 <h1>Learning objectives</h1>
 <ul>
+<li><p>Calculate standard error</p></li>
 <li><p>Determining confidence intervals</p></li>
 <li><p>Understand the difference between dependent and independent
 variables.</p></li>
-<li><p>Identify the null hypothesis and the alternative hypothesis in
-experimental design.</p></li>
 <li><p>Understand the steps for hypothesis testing.</p></li>
-<li><p>Choose statistical tests based on experimental design
-properties.</p></li>
 </ul>
 </div>
 <div id="the-central-limit-theorem-and-standard-error" class="section level1">
